--- a/examples/location.html
+++ b/examples/location.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-
-<script src="https://raw.githubusercontent.com/ramanic/Nepal.js/master/js/Nepal.min.js"></script>
+<script type="text/javascript" src="../js/Nepal-min.js"></script>
 </body>
 </html>
